package in_myfiles.behavioral_pattern.strategy

data class PageInfo(val pageName: String = "")
